--- a/src/index.html
+++ b/src/index.html
@@ -562,7 +562,7 @@
 
                 <div class="tab-block__tabs-body">
 
-                    <div id="tab-001" class="tab-block-slide" data-carousel="">
+                    <div id="tab-001" data-tab-name="tab-001" class="tab-block-slide" data-carousel="">
 
                         <button class="tab-block-slide__btn prev" data-carousel-button="prev">
                             <svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -609,7 +609,7 @@
 
                     </div>
 
-                    <div id="tab-002" class="tab-block-slide" data-carousel="">
+                    <div id="tab-002" data-tab-name="tab-002" class="tab-block-slide" data-carousel="">
 
                         <button class="tab-block-slide__btn prev" data-carousel-button="prev">
                             <svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -840,7 +840,7 @@
                         </div>
 
                     </div>
-                    <div id="tab-007"  class="tab-block__tabs-body__block tab-007">
+                    <!-- <div id="tab-007" data-block="active" class="tab-block__tabs-body__block tab-007">
                         <div class="tab-block__tabs-body__img">
                             <img src="/img/slides/teamSlide/team1.jpg" alt="">
                         </div>
@@ -854,7 +854,7 @@
                             </p>
                             <a href="tel:+7978XXXXXXX">+ 7 (978) XXX-XX-XX </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
            </div>            
         </div>
