--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,21 @@
 <body>
     <header class="header">
         <div class="header-main">
-            <div class="header-main__img" data-slides="">
-                <button class="header-main__img-prev" data-carousel-button="">
+            <div class="header-main__img" data-carousel>
+                <button class="header-main__img-btn prev" data-carousel-button>
                     <svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0.500006 23.4547C0.500007 10.7781 10.7966 0.499985 23.5 0.499987C36.2035 0.499988 46.5 10.7781 46.5 23.4547C46.5 36.1313 36.2035 46.4094 23.5 46.4094C10.7965 46.4094 0.500005 36.1313 0.500006 23.4547Z" fill="#EBF1FD" fill-opacity="0.87" stroke="#5A8CC1"/>
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M33.6689 18.2776C33.631 18.8296 32.8091 19.9696 31.8412 20.8116C30.4171 22.0503 30.4326 22.7425 31.9221 24.4482C37.8979 31.2913 27.5646 36.467 18.5639 30.4473C16.3258 28.9503 7.7169 24.0174 7.56369 22.741C7.41048 21.4647 8.73459 20.7909 13.5637 18.2497C16.7092 15.8895 24.4615 14.4297 26.6882 14.2575C29.9711 14.002 33.8115 16.214 33.6689 18.2776ZM24.5637 16.4742C22.3591 16.9215 18.9073 18.0782 15.5637 19.7468C12.5637 21.2439 9.06369 22.741 12.0637 24.2381C18.0637 28.7295 31.5637 35.4376 31.2415 27.2142C31.0791 25.3285 30.4781 24.8028 27.2592 23.7355C23.8055 22.5893 23.6319 22.4239 25.3087 21.8695C29.9887 20.3232 31.2218 19.0891 29.7592 17.4142C28.7546 16.2638 28.0637 15.4761 24.5637 16.4742Z" fill="#5A8CC1"/>
                     </svg>
                 </button>
-                <button class="header-main__img-next" data-carousel-button="">
+                <button class="header-main__img-btn next" data-carousel-button>
                     <svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M46.5 23.4547C46.5 36.1314 36.2035 46.4094 23.5 46.4094C10.7965 46.4094 0.5 36.1314 0.5 23.4547C0.5 10.7781 10.7965 0.5 23.5 0.5C36.2035 0.5 46.5 10.7781 46.5 23.4547Z" fill="#EBF1FD" fill-opacity="0.87" stroke="#5A8CC1"/>
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M13.3311 18.2115C13.369 18.7635 14.1909 19.9034 15.1588 20.7454C16.5829 21.9842 16.5674 22.6764 15.0779 24.3821C9.10214 31.2252 19.4354 36.4008 28.436 30.3812C30.6742 28.8842 39.2831 23.9513 39.4363 22.6749C39.5895 21.3986 38.2654 20.7248 33.4363 18.1836C30.2908 15.8234 22.5385 14.3636 20.3117 14.1914C17.0289 13.9359 13.1885 16.1479 13.3311 18.2115ZM22.4363 16.4081C24.6409 16.8553 28.0927 18.0121 31.4363 19.6807C34.4363 21.1778 37.9363 22.6749 34.9363 24.172C28.9363 28.6634 15.4363 35.3715 15.7585 27.1481C15.9209 25.2624 16.5219 24.7366 19.7408 23.6694C23.1945 22.5231 23.3681 22.3577 21.6913 21.8034C17.0113 20.2571 15.7782 19.0229 17.2408 17.3481C18.2454 16.1977 18.9363 15.41 22.4363 16.4081Z" fill="#5A8CC1"/>
                     </svg>
                 </button>
-                <div class="header-main__img-track" data-carousel="">
-                    <div class="header-main__img-track__item" data-active="">
+                <div class="header-main__img-track" data-slides>
+                    <div class="header-main__img-track__item" data-active>
                         <img src="/img/promo.jpg" alt="">
                     </div>
                     <div class="header-main__img-track__item">
@@ -139,7 +139,7 @@
     </div>
 
     <div class="container">
-        <div class="fourth-block">
+        <section class="fourth-block">
             <h2 class="fourth-block__title">Формат свадьбы</h2>
             <div class="fourth-block__lines">
                 <hr>
@@ -288,11 +288,11 @@
                     </div>
                 </div>
            </div>            
-        </div>
+        </section>
     </div>
 
     <div class="container">
-        <div class="fifth-block">
+        <section class="fifth-block">
             <h2 class="fifth-block__title">Основные задачи невесты</h2>
             <div class="fifth-block__lines">
                 <hr>
@@ -337,11 +337,11 @@
                 </div>
                 <div class="fifth-block__second-img"></div>
             </div>
-        </div>
+        </section>
     </div>
 
     <div class="container">
-        <div class="sixth-block">
+        <section class="sixth-block">
             <h2 class="sixth-block__title">Проработайте банкетное меню</h2>
             <div class="sixth-block__lines">
                 <hr>
@@ -381,11 +381,11 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </section>
     </div>
 
     <div class="container">
-        <div class="seventh-block">
+        <section class="seventh-block">
             <h2 class="seventh-block__title">Время определиться с площадкой</h2>
 
             <div class="seventh-block__lines">
@@ -474,11 +474,11 @@
                     
                 </div>
             </div>
-        </div>
+        </section>
     </div>
 
     <div class="container">
-        <div class="song-block">
+        <section class="song-block">
             <h2 class="song-block__title">Выберите любимую песню на двоих и первый танец</h2>
             <div class="song-block__lines">
                 <hr>
@@ -536,11 +536,11 @@
                     <img src="/img/fifth2.jpg" alt="">
                 </div>
             </div>
-        </div>
+        </section>
     </div>
 
     <div class="container">
-        <div class="tab-block">
+        <section class="tab-block">
             <h2 class="tab-block__title">Выберите свадебную команду</h2>
             <div class="tab-block__lines">
                 <hr>
@@ -838,28 +838,60 @@
                         </div>
 
                     </div>
-                    <!-- <div id="tab-007" data-block="active" class="tab-block__tabs-body__block tab-007">
-                        <div class="tab-block__tabs-body__img">
-                            <img src="/img/slides/teamSlide/team1.jpg" alt="">
+                    
+                    <div id="tab-007" class="tab-block-slide" data-carousel="">
+
+                        <button class="tab-block-slide__btn prev" data-carousel-button="prev">
+                            <svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.500006 23.4547C0.500007 10.7781 10.7966 0.499985 23.5 0.499987C36.2035 0.499988 46.5 10.7781 46.5 23.4547C46.5 36.1313 36.2035 46.4094 23.5 46.4094C10.7965 46.4094 0.500005 36.1313 0.500006 23.4547Z" fill="#EBF1FD" fill-opacity="0.87" stroke="#5A8CC1"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M33.6689 18.2776C33.631 18.8296 32.8091 19.9696 31.8412 20.8116C30.4171 22.0503 30.4326 22.7425 31.9221 24.4482C37.8979 31.2913 27.5646 36.467 18.5639 30.4473C16.3258 28.9503 7.7169 24.0174 7.56369 22.741C7.41048 21.4647 8.73459 20.7909 13.5637 18.2497C16.7092 15.8895 24.4615 14.4297 26.6882 14.2575C29.9711 14.002 33.8115 16.214 33.6689 18.2776ZM24.5637 16.4742C22.3591 16.9215 18.9073 18.0782 15.5637 19.7468C12.5637 21.2439 9.06369 22.741 12.0637 24.2381C18.0637 28.7295 31.5637 35.4376 31.2415 27.2142C31.0791 25.3285 30.4781 24.8028 27.2592 23.7355C23.8055 22.5893 23.6319 22.4239 25.3087 21.8695C29.9887 20.3232 31.2218 19.0891 29.7592 17.4142C28.7546 16.2638 28.0637 15.4761 24.5637 16.4742Z" fill="#5A8CC1"/>
+                            </svg>
+                        </button>
+                        <button class="tab-block-slide__btn next" data-carousel-button="next">
+                            <svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M46.5 23.4547C46.5 36.1314 36.2035 46.4094 23.5 46.4094C10.7965 46.4094 0.5 36.1314 0.5 23.4547C0.5 10.7781 10.7965 0.5 23.5 0.5C36.2035 0.5 46.5 10.7781 46.5 23.4547Z" fill="#EBF1FD" fill-opacity="0.87" stroke="#5A8CC1"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M13.3311 18.2115C13.369 18.7635 14.1909 19.9034 15.1588 20.7454C16.5829 21.9842 16.5674 22.6764 15.0779 24.3821C9.10214 31.2252 19.4354 36.4008 28.436 30.3812C30.6742 28.8842 39.2831 23.9513 39.4363 22.6749C39.5895 21.3986 38.2654 20.7248 33.4363 18.1836C30.2908 15.8234 22.5385 14.3636 20.3117 14.1914C17.0289 13.9359 13.1885 16.1479 13.3311 18.2115ZM22.4363 16.4081C24.6409 16.8553 28.0927 18.0121 31.4363 19.6807C34.4363 21.1778 37.9363 22.6749 34.9363 24.172C28.9363 28.6634 15.4363 35.3715 15.7585 27.1481C15.9209 25.2624 16.5219 24.7366 19.7408 23.6694C23.1945 22.5231 23.3681 22.3577 21.6913 21.8034C17.0113 20.2571 15.7782 19.0229 17.2408 17.3481C18.2454 16.1977 18.9363 15.41 22.4363 16.4081Z" fill="#5A8CC1"/>
+                            </svg>  
+                        </button>
+
+                        <div class="tab-block-slide__img" data-block="active" data-slides="">
+
+                            <div class="tab-block-slide__items" data-active="">
+                                <img src="/img/slides/teamSlide/team1.jpg" alt="">
+                                <div class="tab-block-slide__items-text">
+                                    <p>
+                                        Большой опыт  и профессионализм в <br> комплексном оформлении Вашего праздника
+                                    </p>
+                                    <p>Елена</p>
+                                    <p>+7 (978) ХХХ-ХХ-ХХ</p>
+                                </div>
+                            </div>
+
+                            <div class="tab-block-slide__items">
+                                <img src="/img/fourth1.jpg" alt="">
+                                <div class="tab-block-slide__items-text">
+                                    <p>Сергей</p>
+                                    <p>Заместитель</p>
+                                </div>
+                            </div>
+
+                            <div class="tab-block-slide__items">
+                                <img src="/img/fourth2.jpg" alt="">
+                                <div class="tab-block-slide__items-text">
+                                    <p>Виктория</p>
+                                    <p>Маркетолог</p>
+                                </div>
+                            </div>
                         </div>
 
-                        <div class="tab-block__tabs-body__text">
-                            <p>
-                                Большой опыт  и профессионализм в комплексном оформлении Вашего праздника
-                                <br>
-                                <br>
-                                Елена
-                            </p>
-                            <a href="tel:+7978XXXXXXX">+ 7 (978) XXX-XX-XX </a>
-                        </div>
-                    </div> -->
+                    </div>
                 </div>
            </div>            
-        </div>
+        </section>
     </div>
 
     <div class="container">
-        <div class="hotel">
+        <section class="hotel">
             <h2 class="hotel-title">Размещение гостей в отеле</h2>
             <div class="hotel-lines">
                 <hr>
@@ -917,11 +949,11 @@
                     </svg>  
                 </div>
             </div>
-        </div>
+        </section>
     </div>
 
     <div class="container">
-        <div class="wedding">
+        <section class="wedding">
             <h2 class="wedding-title">Наши свадьбы</h2>
 
             <div class="wedding-img">
@@ -931,11 +963,11 @@
             <hr class="wedding-line">
 
             <a href="#" class="wedding-text">Смотреть больше</a>
-        </div>
+        </section>
     </div>
 
     <div class="container">
-        <div class="team">
+        <section class="team">
             <h2 class="team-title">Наша команда</h2>
 
             <div class="team-block" data-carousel="">
@@ -981,11 +1013,11 @@
                 </div>
 
             </div>
-        </div>
+        </section>
     </div>
 
     <footer class="footer">
-        <div class="footer-block">
+        <section class="footer-block">
             <div class="footer-block__map">
                 <div style="position:relative;overflow:hidden;width:100%;">
                     <a href="https://yandex.ru/maps/org/plyazh_la_grace/40699517446/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Пляж La Grace</a>
@@ -1049,7 +1081,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </footer>
 
     <script src="/dist/js/bundle.js"></script>
